Fix chevron alignment

--- a/frontend/src/metabase/query_builder/components/expressions/Editor/HelpText/HelpText.module.css
+++ b/frontend/src/metabase/query_builder/components/expressions/Editor/HelpText/HelpText.module.css
@@ -18,11 +18,12 @@
 .toggle {
   margin-left: auto;
   padding: 0 0.65rem;
+  display: flex;
+  align-items: center;
 }
 
 .chevron {
   color: var(--mb-color-text-secondary);
-  padding-top: 1px;
 
   &.open {
     transform: rotate(90deg);
